syntax = "proto2";
package DirectorProtobuf;

// wrapper to determine which protobuf is being sent
message DataWrapper  {
    oneof msg {
        DataList dataList = 2;
        CommandChange commandChange = 3;
        ExecuteCommand executeCommand = 4;
    }
}
// protobufs for sending data
message Data {
    required string name = 2;
    required float value = 3;
}
message DataList {
    repeated Data data = 2;
}
// protobufs for sending command changes
message CommandChange {
    required string name = 2;
    required bool value = 3;
}
//protobufs for sending commands
message ExecuteCommand{
    required string name = 2;
    repeated string args =3;
}
//connection interaction
message UnityCredentials{
    required int32 ID = 2;
    required string token =3;
}
message UnitySettings{
    required string name = 2;
    required bool public = 3;
}

